# PiTrac-E

./: .gitignore  .gitmodules  Containerfile  Makefile  run-container  setup-env  setup-env.unc-backup~  uncrustify.sh
src/: CMakeLists.txt
src/Application/: CMakeLists.txt
src/Application/Agents/: CMakeLists.txt
src/Application/Agents/AgentBase/: GSAgentBase.cpp  GSAgentBase.h
src/Application/Agents/CameraAgent/: CameraAgent.cpp  CameraAgent.h  CameraAgentFactory.h
src/Application/Agents/FrameProcessorAgent/: CMakeLists.txt  FrameProcessorAgent.cpp  FrameProcessorAgent.h  FrameProcessorAgentFactory.h
src/Application/AppAgents/: CMakeLists.txt
src/Application/AppAgents/AgentBase/: CMakeLists.txt  GSAgentBase.cpp  GSAgentBase.h
src/Application/AppAgents/CameraAgent/: CMakeLists.txt  CameraAgent.cpp  CameraAgent.h  CameraAgentFactory.h
src/Application/AppAgents/FrameProcessorAgent/: FrameProcessorAgent.cpp  FrameProcessorAgent.h  FrameProcessorAgentFactory.h
src/Application/AppTasks/: CMakeLists.txt
src/Application/AppTasks/CameraAgentTask/: CMakeLists.txt  CameraAgentTask.cpp  CameraAgentTask.h  CameraAgentTaskLauncher.cpp
src/Application/AppTasks/CameraTask/: CMakeLists.txt  CameraTask.cpp  CameraTask.h  CameraTaskLauncher.cpp
src/Application/Events/: gs_events.cpp  gs_events.h
src/Application/FSM/: gs_fsm.cpp  gs_fsm.h
src/Application/GolfSim/: GolfSim.cpp  lm_main.cpp
src/Application/GolfSim/Events/: gs_events.cpp  gs_events.h
src/Application/GolfSim/FSM/: gs_fsm.cpp  gs_fsm.h
src/Application/GolfSim/Procs/: ball_watcher.cpp  ball_watcher.h
src/Application/GolfSim/UI/: gs_ui_system.cpp  gs_ui_system.h
src/Application/Managers/: CMakeLists.txt
src/Application/Managers/ManagerBase/: CMakeLists.txt  GSManagerBase.cpp  GSManagerBase.h
src/Application/Managers/SystemManager/: SystemManager.h
src/Application/Procs/: ball_watcher.cpp  ball_watcher.h
src/Application/TaskManager/: GSTaskManager.h
src/Application/Tasks/: CMakeLists.txt
src/Application/Tasks/CameraTask/: CameraTask.cpp  CameraTask.h  CameraTaskLauncher.cpp
src/Application/UI/: gs_ui_system.cpp  gs_ui_system.h
src/Calibration/: CMakeLists.txt  CalibrateDistortions.cpp  CalibrateDistortions.h
src/Common/: CMakeLists.txt
src/Common/Camera/: camera_hardware.cpp  camera_hardware.h  gs_camera.cpp  gs_camera.h
src/Common/GolfSim/Ball/: golf_ball.cpp  golf_ball.h
src/Common/GolfSim/Clubs/: gs_club_data.cpp  gs_club_data.h  gs_clubs.cpp  gs_clubs.h
src/Common/GolfSim/Config/: gs_config.cpp  gs_config.h
src/Common/GolfSim/Motion/: motion_detect.h
src/Common/GolfSim/Options/: gs_options.cpp  gs_options.h
src/Common/GolfSim/Pulsing/: pulse_strobe.cpp  pulse_strobe.h
src/Common/System/: SystemModes.h
src/Common/Utils/: CMakeLists.txt
src/Common/Utils/CVUtils/: CMakeLists.txt  cv_utils.cpp  cv_utils.h
src/Common/Utils/ColorSys/: CMakeLists.txt  colorsys.cpp  colorsys.h
src/Common/Utils/FileUtils/: CMakeLists.txt  FileUtils.cpp  FileUtils.h
src/Common/Utils/Json/: jsonparser.cpp  jsonparser.h
src/Common/Utils/Logging/: CMakeLists.txt  GSLogger.cpp  GSLogger.h  LoggingTools.cpp  LoggingTools.h  d2utmpI83hY3
src/Infrastructure/: CMakeLists.txt
src/Infrastructure/AgentTask/: CMakeLists.txt  GSAgentTask.cpp  GSAgentTask.h
src/Infrastructure/DataStructures/: FrameBuffer.h  ball_watcher_image_buffer.cpp  ball_watcher_image_buffer.h  blocking_queue.h
src/Infrastructure/ImageProcessing/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h
src/Infrastructure/ImageProcessing/EdgeDrawing/: ED.cpp  ED.h  EDColor.cpp  EDColor.h  EDPF.cpp  EDPF.h
src/Infrastructure/ImageProcessing/EllipseDetector/: EllipseDetectorCommon.cpp  EllipseDetectorCommon.h  EllipseDetectorYaed.cpp  EllipseDetectorYaed.h
src/Infrastructure/Interprocess/: gs_ipc_control_msg.cpp  gs_ipc_control_msg.h  gs_ipc_mat.cpp  gs_ipc_mat.h  gs_ipc_message.cpp  gs_ipc_message.h  gs_ipc_result.cpp  gs_ipc_result.h  gs_ipc_system.cpp  gs_ipc_system.h
src/Infrastructure/ManagerTask/: CMakeLists.txt  GSManagerTask.cpp  GSManagerTask.h
src/Infrastructure/Messaging/: CMakeLists.txt  GSMessageInterface.h  GSMessagePublisher.h  GSMessageSubscriber.h
src/Infrastructure/Messaging/Messagers/: GSMessagerBase.h
src/Infrastructure/Messaging/Messages/: GSCameraFrameMsg.cpp  GSCameraFrameMsg.h  GSCameraFrameRawMsg.cpp  GSCameraFrameRawMsg.h  GSMessageBase.cpp  GSMessageBase.h  GSMessageFactory.cpp  GSMessageFactory.h
src/Infrastructure/TaskProcess/: CMakeLists.txt  GSTask.cpp  GSTask.h  GSTaskBase.cpp  GSTaskBase.h
src/Infrastructure/Threading/: worker_thread.cpp  worker_thread.h
src/Interfaces/: CMakeLists.txt
src/Interfaces/Camera/: CMakeLists.txt  GSCameraInterface.h
src/Interfaces/Camera/GSCameraBase/: CMakeLists.txt  GSCameraBase.cpp  GSCameraBase.h
src/Interfaces/Camera/imx296/: CMakeLists.txt  imx296.cpp  imx296.h
src/Interfaces/ImageAnalysis/: CMakeLists.txt
src/Interfaces/ImageAnalysis/application/: image_analysis_service.hpp
src/Interfaces/ImageAnalysis/domain/: analysis_results.hpp  interfaces.hpp  value_objects.hpp
src/Interfaces/ImageAnalysis/infrastructure/: ml_image_analyzer.hpp  opencv_image_analyzer.cpp  opencv_image_analyzer.hpp
src/Interfaces/libcamera/: libcamera_interface.cpp  libcamera_interface.h  libcamera_jpeg.cpp  still_image_libcamera_app.hpp
src/startapp/: CMakeLists.txt  startapp.cpp  startapp.h
src/tests/: CMakeLists.txt
src/tests/functional/: CMakeLists.txt
src/tests/functional/Interfaces/Camera/: test_image.cpp  test_image.h
src/tests/functional/Interfaces/Camera/GSCameraBase/: CMakeLists.txt  test_GSCameraBase.cpp
src/tests/functional/Interfaces/Camera/imx296/: CMakeLists.txt  test_imx296.cpp
src/tests/unit/: CMakeLists.txt
src/tests/unit/Common/Utils/CV/: CMakeLists.txt  test_cv_utils.cpp
src/tests/unit/Common/Utils/ColorSys/: CMakeLists.txt  test_colorsys.cpp
src/tests/unit/Common/Utils/FileUtils/: CMakeLists.txt  test_file_utils.cpp
src/tests/unit/Common/Utils/Logging/: CMakeLists.txt  test_gslogger.cpp
(+7 files in other folders)
